sol n 3